--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,5 +56,16 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+    <array>
+    	<dict>
+    		<key>CFBundleTypeRole</key>
+    		<string>Editor</string>
+    		<key>CFBundleURLSchemes</key>
+    		<array>
+    			<string>com.googleusercontent.apps.1075726081337-07b70246i97b0pkavv68k1abelcqhnh3</string>
+    		</array>
+    	</dict>
+    </array>
 </dict>
 </plist>
