--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.5
+  json_annotation: ^4.8.0
   firebase_core: ^2.5.0
   firebase_auth: ^4.2.6
   google_sign_in: ^5.4.4
@@ -41,6 +42,7 @@ dependencies:
   flutter_local_notifications: ^13.0.0
   image_picker: ^0.8.6+1
   intl: ^0.17.0
+  go_router: ^6.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,6 +51,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
