--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   image_picker: ^0.8.6+1
   intl: ^0.17.0
   go_router: ^6.0.4
+  path_provider: ^2.0.11
+  flutter_image_compress: ^1.1.3
+  image_cropper: ^3.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
