--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   uuid: ^3.0.7
   cached_network_image: ^3.2.3
+  webview_flutter: ^4.0.4
+  flutter_dotenv: ^5.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -78,6 +80,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - .env
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
