--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   cached_network_image: ^3.2.3
   webview_flutter: ^4.0.4
   flutter_dotenv: ^5.0.2
+  debounce_throttle: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
