--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,20 +101,21 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Paybooc
+    - family: NanumGothic
       fonts:
-        - asset: assets/fonts/paybooc Light.ttf
+        - asset: assets/fonts/nanum_gothic/NanumGothicLight.ttf
           weight: 300
-        - asset: assets/fonts/paybooc Medium.ttf
+        - asset: assets/fonts/nanum_gothic/NanumGothic.ttf
           weight: 400
-        - asset: assets/fonts/paybooc Medium.ttf
+        - asset: assets/fonts/nanum_gothic/NanumGothic.ttf
           weight: 500
-        - asset: assets/fonts/paybooc Bold.ttf
+        - asset: assets/fonts/nanum_gothic/NanumGothicBold.ttf
           weight: 600
-        - asset: assets/fonts/paybooc Bold.ttf
+        - asset: assets/fonts/nanum_gothic/NanumGothicBold.ttf
           weight: 700
-        - asset: assets/fonts/paybooc ExtraBold.ttf
+        - asset: assets/fonts/nanum_gothic/NanumGothicExtraBold.ttf
           weight: 800
+
   # fonts:
   #   - family: Schyler
   #     fonts:
