--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,14 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   uuid: ^3.0.7
   cached_network_image: ^3.2.3
+  webview_flutter: ^4.0.4
+  flutter_dotenv: ^5.0.2
+  debounce_throttle: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +82,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - .env
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -95,20 +101,21 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Paybooc
+    - family: NanumGothic
       fonts:
-        - asset: assets/fonts/paybooc Light.ttf
+        - asset: assets/fonts/nanum_gothic/NanumGothicLight.ttf
           weight: 300
-        - asset: assets/fonts/paybooc Medium.ttf
+        - asset: assets/fonts/nanum_gothic/NanumGothic.ttf
           weight: 400
-        - asset: assets/fonts/paybooc Medium.ttf
+        - asset: assets/fonts/nanum_gothic/NanumGothic.ttf
           weight: 500
-        - asset: assets/fonts/paybooc Bold.ttf
+        - asset: assets/fonts/nanum_gothic/NanumGothicBold.ttf
           weight: 600
-        - asset: assets/fonts/paybooc Bold.ttf
+        - asset: assets/fonts/nanum_gothic/NanumGothicBold.ttf
           weight: 700
-        - asset: assets/fonts/paybooc ExtraBold.ttf
+        - asset: assets/fonts/nanum_gothic/NanumGothicExtraBold.ttf
           weight: 800
+
   # fonts:
   #   - family: Schyler
   #     fonts:
