--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
 
   assets:
     - .env
+    - assets/image/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
