--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,8 @@ flutter:
   assets:
     - .env
     - assets/image/
+    - assets/image/2x/
+    - assets/image/3x/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
