--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   webview_flutter: ^4.0.4
   flutter_dotenv: ^5.0.2
   debounce_throttle: ^2.0.0
+  sign_in_with_apple: ^4.3.0
+  flutter_secure_storage: ^8.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
