feat: 안드로이드 앱 이름 변경

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.njw9108.recommend_restaurant">
    <application
-        android:label="recommend_restaurant"
+        android:label="마이슐랭"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
