--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,11 +54,12 @@ dependencies:
   debounce_throttle: ^2.0.0
   sign_in_with_apple: ^4.3.0
   flutter_secure_storage: ^8.0.0
+  kakao_flutter_sdk_user: ^1.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  dio: ^5.0.0
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
