--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,11 +52,14 @@ dependencies:
   webview_flutter: ^4.0.4
   flutter_dotenv: ^5.0.2
   debounce_throttle: ^2.0.0
+  sign_in_with_apple: ^4.3.0
+  flutter_secure_storage: ^8.0.0
+  kakao_flutter_sdk_user: ^1.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  dio: ^5.0.0
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
@@ -85,6 +88,8 @@ flutter:
   assets:
     - .env
     - assets/image/
+    - assets/image/2x/
+    - assets/image/3x/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
