--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "firebase-admin": "^11.5.0",
     "firebase-auth": "^0.1.2",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.2.0",
+    "firebase-tools": "^11.24.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.0.0"
