--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   kakao_flutter_sdk_user: ^1.4.1
   cloud_functions: ^4.0.11
+  firebase_remote_config: ^3.0.13
+  package_info_plus: ^3.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
