--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   cloud_functions: ^4.0.11
   firebase_remote_config: ^3.0.13
   package_info_plus: ^3.0.3
+  flutter_screenutil: ^5.6.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
