--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,11 +58,13 @@ dependencies:
   firebase_remote_config: ^3.0.13
   package_info_plus: ^3.0.3
   flutter_screenutil: ^5.6.1
+  firebase_crashlytics: ^3.0.16
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
+  firebase_performance: ^0.9.0+15
 
 dev_dependencies:
   flutter_test:
