--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   firebase_auth: ^4.2.6
   google_sign_in: ^5.4.4
   cloud_firestore: ^4.4.0
-  shared_preferences: ^2.0.17
   firebase_storage: ^11.0.11
   firebase_messaging: ^14.2.2
   flutter_local_notifications: ^13.0.0
@@ -58,11 +57,14 @@ dependencies:
   cloud_functions: ^4.0.11
   firebase_remote_config: ^3.0.13
   package_info_plus: ^3.0.3
+  flutter_screenutil: ^5.6.1
+  firebase_crashlytics: ^3.0.16
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
+  firebase_performance: ^0.9.0+15
 
 dev_dependencies:
   flutter_test:
