fix: ios 심사 거절 수정 카메라 권한 메세지 수정

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,9 +55,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>사진 및 동영상 촬영 카메라 권한</string>
+	<string>레스토랑과 음식 이미지를 업로드하기 위해서 사진 및 동영상 촬영 카메라 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>사진 동영상 첨부 사용권한</string>
+	<string>레스토랑과 음식 이미지를 업로드하기 위해 사진첩의 접근 권한이 필요합니다.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UIBackgroundModes</key>
