--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   package_info_plus: ^3.0.3
   flutter_screenutil: ^5.6.1
   firebase_crashlytics: ^3.0.16
+  url_launcher: ^6.1.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
